styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    /* default theme */
    --color-text-base: #01060c;
    --color-bg-base: #fefefe;
    --color-bg-base-footer: #efefef;
    --color-bg-base-tag: #f5f5f5;
    --color-bg-base-card: inherit;
    --color-bg-base-card-hover: #f5f5f5;
    --color-bg-base-sidebar-item-hover: #ebe9e9;
    --color-border-base: #908e94;

    /* dark theme */
    --color-text-dark: #e0e0e0;
    --color-bg-dark: #1a202c;
    --color-bg-dark-footer: #131821;
    --color-bg-dark-card: inherit;
    --color-bg-dark-card-hover: #292e3a;
    --color-bg-dark-tag: #3e3847;
    --color-bg-dark-sidebar-item-hover: #180933;
    --color-border-dark: #efeefe;

    font-size: 16px;
  }

  html {
    scroll-behavior: smooth !important;
    scroll-padding: 1rem;
    width: 100vw;
    height: 100vh;
  }

  body {
    @apply w-full h-full overflow-x-hidden bg-skin-base dark:bg-skin-dark;
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    @apply text-2xl font-bold leading-9 mt-4 text-gradient-hero dark:text-gradient-hero-dark;
  }
  p {
    @apply text-lg my-4;
  }

  code {
    @apply my-3 rounded-md;
    counter-reset: line;
  }
  code > .line::before {
    counter-increment: line;
    content: counter(line);

    /* Other styling */
    @apply inline-block w-4 mr-8 text-right text-gray-400;
  }

  article div ul {
    @apply w-[340px] 3xs:w-[360px] 2xs:w-[480px] xs:w-[576px] sm:w-[640px] md:w-[768px];
  }

  article p a:hover {
    text-decoration: underline;
  }

  article h2 {
    @apply text-gradient-hero dark:text-gradient-hero-dark;
  }

  article hr {
    @apply my-2;
  }
}

@layer utilities {
  .content-visibility-auto {
    content-visibility: auto;
  }

  .text-gradient,
  .text-gradient-hero {
    @apply bg-gradient-to-tr hover:bg-gradient-to-bl from-blue-700 to-green-700 block text-transparent bg-clip-text;
  }
  .text-gradient {
    @apply hover:scale-[1.1];
  }

  .text-gradient-hero-dark {
    @apply bg-gradient-to-tr hover:bg-gradient-to-bl from-blue-500 to-green-500 block text-transparent bg-clip-text;
  }

  .bg-pattern {
    @apply w-full h-full  opacity-[92%] overflow-x-hidden;
    background-image: linear-gradient(#45f766ba 1px, transparent 1px),
      linear-gradient(to right, #45f766ba 1px, #6969ef00 1px);
    background-size: 16px 16px;
  }
}

.bib__anchor {
  color: blue !important;
}

.bib__anchor:hover {
  text-decoration: none !important;
}

.state {
  width: 160px;
  height: 300px;
  position: relative;
}
.state .ball {
  width: 13px;
  height: 13px;
  position: absolute;
  top: 9px;
  left: 2px;
  border-radius: 51px;
  z-index: 2;
  animation: ball-y 3s;
  transform-origin: 50% 50%;

  @apply bg-gradient-to-tr hover:bg-gradient-to-bl from-blue-700 to-green-700 inline-block text-transparent;
}

.state .ball-arc {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  animation: ball-x 4s cubic-bezier(0, 0, 0.35, 1);
}

@keyframes ball-x {
  0% {
    -webkit-transform: translateX(-190px);
  }
  100% {
    -webkit-transform: translateX(0px);
  }
}

@keyframes ball-y {
  0% {
    -webkit-transform: translateY(-120px);
    -webkit-animation-timing-function: ease-in;
  }
  28% {
    -webkit-transform: translateY(-60px);
    -webkit-animation-timing-function: ease-in;
  }
  56% {
    -webkit-transform: translateY(-36px);
    -webkit-animation-timing-function: ease-in;
  }
  84% {
    -webkit-transform: translateY(-25px);
    -webkit-animation-timing-function: ease-in;
  }
  14%,
  42%,
  75%,
  100% {
    -webkit-transform: translateY(0px);
    -webkit-animation-timing-function: ease-out;
  }
}

.path-0 {
  animation: pathAnim-0 24s;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
}
@keyframes pathAnim-0 {
  0% {
    d: path(
      'M 0,400 C 0,400 0,133 0,133 C 83.2248803827751,105.50717703349284 166.4497607655502,78.01435406698566 274,85 C 381.5502392344498,91.98564593301434 513.4258373205743,133.44976076555022 617,130 C 720.5741626794257,126.55023923444978 795.846889952153,78.1866028708134 883,83 C 970.153110047847,87.8133971291866 1069.1866028708134,145.80382775119617 1164,163 C 1258.8133971291866,180.19617224880383 1349.4066985645932,156.5980861244019 1440,133 C 1440,133 1440,400 1440,400 Z'
    );
  }
  25% {
    d: path(
      'M 0,400 C 0,400 0,133 0,133 C 75.90430622009572,136.58851674641147 151.80861244019144,140.17703349282297 243,137 C 334.19138755980856,133.82296650717703 440.66985645933005,123.88038277511961 561,135 C 681.33014354067,146.1196172248804 815.5119617224881,178.30143540669857 901,174 C 986.4880382775119,169.69856459330143 1023.2822966507179,128.91387559808612 1105,116 C 1186.7177033492821,103.08612440191388 1313.358851674641,118.04306220095694 1440,133 C 1440,133 1440,400 1440,400 Z'
    );
  }
  50% {
    d: path(
      'M 0,400 C 0,400 0,133 0,133 C 85.57894736842107,106.91387559808612 171.15789473684214,80.82775119617226 259,92 C 346.84210526315786,103.17224880382774 436.9473684210526,151.60287081339712 554,167 C 671.0526315789474,182.39712918660288 815.0526315789474,164.76076555023926 907,157 C 998.9473684210526,149.23923444976074 1038.842105263158,151.35406698564591 1119,149 C 1199.157894736842,146.64593301435409 1319.578947368421,139.82296650717706 1440,133 C 1440,133 1440,400 1440,400 Z'
    );
  }
  75% {
    d: path(
      'M 0,400 C 0,400 0,133 0,133 C 109.29186602870814,118.68421052631578 218.58373205741628,104.36842105263158 312,101 C 405.4162679425837,97.63157894736842 482.9569377990431,105.21052631578948 585,120 C 687.0430622009569,134.78947368421052 813.5885167464115,156.7894736842105 903,146 C 992.4114832535885,135.2105263157895 1044.688995215311,91.63157894736842 1128,84 C 1211.311004784689,76.36842105263158 1325.6555023923445,104.68421052631578 1440,133 C 1440,133 1440,400 1440,400 Z'
    );
  }
  100% {
    d: path(
      'M 0,400 C 0,400 0,133 0,133 C 83.2248803827751,105.50717703349284 166.4497607655502,78.01435406698566 274,85 C 381.5502392344498,91.98564593301434 513.4258373205743,133.44976076555022 617,130 C 720.5741626794257,126.55023923444978 795.846889952153,78.1866028708134 883,83 C 970.153110047847,87.8133971291866 1069.1866028708134,145.80382775119617 1164,163 C 1258.8133971291866,180.19617224880383 1349.4066985645932,156.5980861244019 1440,133 C 1440,133 1440,400 1440,400 Z'
    );
  }
}

/* highlight.js mellow-purple.css background overrides for actual theme  */
html:not(.dark) .hljs {
  /* Your styles here */
  background-color: #f3f3ff !important; /* Example background color for light mode */
  color: black; /* Example text color for light mode */
}

html:not(.dark) *::selection {
  /* Your styles here */
  background-color: #c4c4cf !important; /* Example background color for light mode */
  color: black; /*Example text color for light mode */
}

html:not(.dark) .hljs-comment {
  color: #40027e;
}

html:not(.dark) .hljs-keyword,
html:not(.dark)  .hljs-meta {
  color: #ff0000;
}

html:not(.dark) .hljs-tag {
  color: #660000;
}

